# UnityResolveVR

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: Il2Cpp-Headers.hpp  UnityResolve.hpp  Utils.hpp  classmap.h
gradle/wrapper/: gradle-wrapper.properties
